--- a/app/views/layouts/_sidebar1.html.erb
+++ b/app/views/layouts/_sidebar1.html.erb
@@ -1,4 +1,5 @@
 <div class="sidebar">
+<div class="sidebar">
 	
 							<!-- NEWSLETTER WIDGET -->
 	                        <div class="panel panel-default panel-sidebar-1">
