--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -237,7 +237,7 @@ ul.ui-autocomplete {
             select: function (event, ui) {
                 //console.log('comes in selected item');
                 event.preventDefault();
-                window.location.href = "/merchant/checkbalance/" + ui.item.id;
+                window.location.href = "/giftcard/new/" + ui.item.id;
      
             }
         })
