--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -149,7 +149,7 @@
                                 <div class="row">
                                     <% (0..3).each do |k| %>
                                         <% if @causes[i+k] != nil %>
-                                            <div class="col-md-3" style="border-right: #cdcdcd thin solid;min-height:260px">
+                                            <div class="col-md-3" style="border-right: #cdcdcd thin solid;border-bottom: #cdcdcd thin solid;min-height:260px">
                                                 <div class="wp-block inverse">
                                                     <div class="figure" style="min-height:150px">
                                                         <img alt="" src="<%= CLOUDFRONT_HOST %>/<%=@causes[i+k].logo.url%>" class="img-responsive"
@@ -166,9 +166,9 @@
                                                             <a href="<%= "http://" +  @userhost + "/cause/show/" +  @causes[i+k].charityid.to_s %>">
                                                             <h2 class="text-left"><%= @causes[i+k].charityname %></h2>
                                                             </a>
-                                                            <a href="#">
-                                                                Donate
-                                                            </a>  
+                                                            
+                                                                <a href="#" class="btn btn-md"><i class="fa fa-credit-card"></i> Donate</a>
+                                                            
                                                         </div>
                                                         
                                                     </div>
@@ -283,7 +283,7 @@
                                 <div class="row">
                                     <% (0..3).each do |k| %>
                                         <% if @merchants[i+k] != nil %>
-                                            <div class="col-md-3" style="border-right: #cdcdcd thin solid;min-height:200px">
+                                            <div class="col-md-3" style="border-right: #cdcdcd thin solid;border-bottom: #cdcdcd thin solid;min-height:250px">
                                                 <div class="wp-block inverse">
                                                     <div class="figure" style="min-height:150px">
                                                         <img alt="" src="<%= CLOUDFRONT_HOST %>/<%=@merchants[i+k].logo.url%>" class="img-responsive"
