--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -149,7 +149,7 @@
                                 <div class="row">
                                     <% (0..3).each do |k| %>
                                         <% if @causes[i+k] != nil %>
-                                            <div class="col-md-3" style="border-right: #cdcdcd thin solid;border-bottom: #cdcdcd thin solid;min-height:260px">
+                                            <div class="col-md-3" style="border-right: #cdcdcd thin solid;border-bottom: #cdcdcd thin solid;min-height:300px">
                                                 <div class="wp-block inverse">
                                                     <div class="figure" style="min-height:150px">
                                                         <img alt="" src="<%= CLOUDFRONT_HOST %>/<%=@causes[i+k].logo.url%>" class="img-responsive"
@@ -166,8 +166,9 @@
                                                             <a href="<%= "http://" +  @userhost + "/cause/show/" +  @causes[i+k].charityid.to_s %>">
                                                             <h2 class="text-left"><%= @causes[i+k].charityname %></h2>
                                                             </a>
-                                                            
-                                                                <a href="#" class="btn btn-md"><i class="fa fa-credit-card"></i> Donate</a>
+                                                            <br/>
+                                                        
+                                                            <a href="#" class="btn btn-md"><i class="fa fa-credit-card"></i> Donate</a>
                                                             
                                                         </div>
                                                         
@@ -291,12 +292,15 @@
                                                         <div class="figcaption bg-base"></div>
                                                         <div class="figcaption-btn">
                                                             <a href="#" class="btn btn-xs btn-b-white theater"><i class="fa fa-credit-card"></i> Donate</a>
-                                                            <a href="<%= "http://" +  @userhost + "/merchant/checkbalance/" +  @merchants[i+k].merchantid.to_s %>" class="btn btn-xs btn-b-white"><i class="fa fa-check-square-o"></i> Check Balance</a>
+                                                            <a href="<%= "http://" +  @userhost + "/giftcard/new/" +  @merchants[i+k].merchantid.to_s %>" class="btn btn-xs btn-b-white"><i class="fa fa-check-square-o"></i> Check Balance</a>
                                                         </div>
                                                     </div>
                                                     <div class="row">
                                                         <div class="col-xs-9">
                                                             <h2 class="text-left"><%= @merchants[i+k].merchantname %></h2>
+                                                            <br>
+
+                                                             <a href="<%= "http://" +  @userhost + "/giftcard/new/" +  @merchants[i+k].merchantid.to_s %>" class="btn btn-md"><i class="fa fa-credit-card"></i>Check Balance</a>
                                                             
                                                         </div>
                                                         
