--- a/app/views/layouts/_sidebargiftcard.html.erb
+++ b/app/views/layouts/_sidebargiftcard.html.erb
@@ -2,7 +2,7 @@
 <div class="sidebar">
 	
 
-<div class="panel panel-default panel-sidebar-1" id="merchantinfo">
+<div class="panel panel-default panel-sidebar-1 visible-lg visible-md" id="merchantinfo">
     <div class="wp-block default">
     <div class="figure">
     	<img alt="" id="merchantlogo" src="<%= CLOUDFRONT_HOST %>/<%=@giftcard.merchant.logo.url%>" class="img-responsive">     
